# langchain_demo

./: .env.example  README.md  bedrock_service.py  chainlit_app.py  create_qdrant_db.py  main.py  mcp_client.py  p2-uber-skan-new-singular-campaign-found.md  pyproject.toml
agents/: chainlit_agent.py  qdrant_agent.py  react_agent.py
agents/tools/: test.py
docs/: all-ping.md
mcp_clients/: math_client.py
mcp_servers/servers/feedmob/: pyproject.toml
mcp_servers/servers/feedmob/src/feedmob/: db.py  server.py
mcp_servers/servers/inmobi/: Dockerfile  README.md  pyproject.toml
mcp_servers/servers/inmobi/src/inmobi/: inmobi_api_service.py  integration_configs.py  server.py
mcp_servers/servers/iron_source/: README.md  pyproject.toml
mcp_servers/servers/iron_source/src/iron_source/: __init__.py  iron_source_api.py  server.py
mcp_servers/servers/jampp/: README.md  pyproject.toml
mcp_servers/servers/jampp/src/jampp/: integration_configs.py  jampp_api_service.py  server.py
