[project]
name = "iron_source"
version = "0.1.0"
description = "Iron Source MCP Server"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "mcp>=1.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.3.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
iron_source = "iron_source:main"
